# goldstone-mgmt

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  Dockerfile.clang  Dockerfile.run  Jenkinsfile  Makefile  README.md
docker/: agent.Dockerfile  base.Dockerfile  builder.Dockerfile  debug.Dockerfile  host.Dockerfile  netopeer2.Dockerfile  north-cli.Dockerfile  north-notif.Dockerfile  north-snmp.Dockerfile  run.Dockerfile  snmpd.Dockerfile  south-dpll.Dockerfile  south-gearbox.Dockerfile  south-notif.Dockerfile  south-onlp.Dockerfile  south-sonic.Dockerfile  south-system.Dockerfile  south-tai.Dockerfile  tester.Dockerfile  xlate-openconfig.Dockerfile
k8s/: .gitignore  Makefile  mgmt.yaml  north-cli.yaml  north-gnmi.yaml  north-netconf.yaml  north-notif.yaml  north-snmp.yaml  prep.yaml  snmp.yaml  south-ocnos.yaml  south-onlp.yaml  south-sonic.yaml  south-system.yaml  south-tai.yaml  system-telemetry.yaml  xlate-oc.yaml  xlate-or.yaml  xlate.yaml
patches/: netopeer2-cli.patch  series  sysrepoctl-install.patch
scripts/: gs-yang.py  reload.sh  snmp.conf
src/south/netlink/: Cargo.toml
src/south/netlink/src/: main.rs  server.rs  xpath.rs
tests/: test_abort.py  test_libyang.py  test_sysrepo.py
tools/: build_onlp.sh  mk_quilt_patch.py  release.py  tai_yang_gen.py
yang/: goldstone-aaa.yang  goldstone-arp.yang  goldstone-component-connection.yang  goldstone-dpll.yang  goldstone-gearbox.yang  goldstone-interface.yang  goldstone-interfaces.yang  goldstone-ip.yang  goldstone-ipv4.yang  goldstone-mgmt-interfaces.yang  goldstone-nexthop.yang  (+17 more)
(+372 files in other folders)
